[tool.poetry]
name = "xlab-hack"
version = "0.1.0"
description = ""
authors = ["Damir21 <damir-salakhov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^21.6"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
